# aquarium-squid

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml  memcheck.yml
cmake/: FetchAquariumCMocka.cmake  FetchAquariumLionfish.cmake
doc/: Conventions.md
include/: squid.h
include/squid/: error.h  executor.h  future.h
src/: error.c  executor.c  future.c  squid.c
src/private/: executer.h  future.h
test/: test_executor.c  test_future.c  test_squid.c
